Añado fotgrafía, intento jugar con el  ScrollView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background=" #54f4c4"
+    android:background="@color/azulVerdoso"
     tools:context=".MainActivity">
 
     <ImageView
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
         android:layout_marginTop="200dp"
-        android:backgroundTint="#54f4c4"
+        android:backgroundTint="@color/azulVerdoso"
         android:src="@drawable/foto2" />
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
         android:layout_gravity="bottom|center"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="100dp"
-        android:backgroundTint="#54f4c4"
+        android:backgroundTint="@color/azulVerdoso"
         android:src="@drawable/foto3" />
 
 
