--- a/app/src/main/res/layout/activity_singin.xml
+++ b/app/src/main/res/layout/activity_singin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#54f4c4"
+    android:background="@color/azulVerdoso"
     tools:context=".ActivitySingIn">
 
     <ImageView
