--- a/app/src/main/res/layout/fragment_registro_profesional.xml
+++ b/app/src/main/res/layout/fragment_registro_profesional.xml
@@ -4,102 +4,406 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fillViewport="true">
+    android:background="@color/azulVerdoso"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:context=".RegistroProfesional">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/azulVerdoso"
-        tools:context=".RegistroProfesional"
+        android:layout_height="wrap_content">
 
-        >
+        <TextView
+            android:id="@+id/txttitulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|top"
+            android:layout_marginBottom="20dp"
+            android:text="Registro Profesionales :"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
+            android:layout_marginBottom="12dp"
             android:src="@drawable/fotoperfil"
+            app:layout_constraintBottom_toTopOf="@id/txtNombre"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteY="75dp" />
-
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registro Profesionales :"
-            android:textColor="@color/white"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="31dp"
-            tools:layout_editor_absoluteY="35dp" />
-
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/txtNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="200dp"
             android:text="Nombre"
             android:textColor="@color/white"
             android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtCubrir"
-            app:layout_constraintStart_toStartOf="@+id/guideline3" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtPunto"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginTop="12dp"
             android:text="*"
             android:textColor="@color/rojo"
             android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtCubrir"
-            app:layout_constraintStart_toEndOf="@+id/txtNombre" />
+            app:layout_constraintStart_toEndOf="@+id/txtNombre"
+            app:layout_constraintTop_toBottomOf="@id/imageView" />
 
-        <TextView
-            android:id="@+id/txtCubrir"
+        <EditText
+            android:id="@+id/etCubrirNombre"
             android:layout_width="150dp"
             android:layout_height="30dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:textSize="20dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtNombre" />
 
         <TextView
-            android:id="@+id/txtNombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="28dp"
-            android:text="Nombre"
+            android:id="@+id/txtApellidos"
+            android:layout_width="130dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="Apellidos"
             android:textColor="@color/white"
             android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtCubrir"
-            app:layout_constraintStart_toStartOf="@+id/guideline3" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirNombre" />
 
         <TextView
-            android:id="@+id/txtPunto"
+            android:id="@+id/txtPunto2"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginTop="50dp"
             android:text="*"
             android:textColor="@color/rojo"
             android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtCubrir"
-            app:layout_constraintStart_toEndOf="@+id/txtNombre" />
+            app:layout_constraintStart_toEndOf="@+id/txtApellidos"
+            app:layout_constraintTop_toTopOf="@id/etCubrirNombre" />
 
-        <TextView
-            android:id="@+id/txtCubrir"
+        <EditText
+            android:id="@+id/etCubrirApellido"
             android:layout_width="150dp"
             android:layout_height="30dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="104dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
             android:background="@color/white"
             android:textSize="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtApellidos" />
 
+        <TextView
+            android:id="@+id/txtNIF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="NIF/NIE"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirApellido" />
+
+        <TextView
+            android:id="@+id/txtPunto3"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtNIF"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirApellido" />
+
+        <EditText
+            android:id="@+id/etCubrirNIF"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtNIF" />
+
+        <TextView
+            android:id="@+id/txtnumeroSS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="Número afiliación S.S"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirNIF" />
+
+        <TextView
+            android:id="@+id/txtPunto4"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtnumeroSS"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirNIF" />
+
+        <EditText
+            android:id="@+id/etCubrirNumero"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtnumeroSS" />
+
+        <TextView
+            android:id="@+id/txtIBAN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="IBAN"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirNumero" />
+
+        <TextView
+            android:id="@+id/txtPunto5"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtIBAN"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirNumero" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN1"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN2"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/etCubrirIBAN1"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN3"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/etCubrirIBAN2"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN4"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/etCubrirIBAN3"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN5"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/etCubrirIBAN4"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <EditText
+            android:id="@+id/etCubrirIBAN6"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/etCubrirIBAN5"
+            app:layout_constraintTop_toBottomOf="@id/txtIBAN" />
+
+        <TextView
+            android:id="@+id/txtFechaNacimiento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="Fecha de Nacimiento"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirIBAN1" />
+        <TextView
+            android:id="@+id/txtPunto7"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtFechaNacimiento"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirIBAN1" />
+
+        <EditText
+            android:id="@+id/etCubrirFecha"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtFechaNacimiento" />
+
+        <TextView
+            android:id="@+id/txtCP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="CP"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirFecha" />
+
+        <TextView
+            android:id="@+id/txtPunto8"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="51dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtCP"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirFecha" />
+
+        <EditText
+            android:id="@+id/etCubrirCP"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtCP" />
+
+        <TextView
+            android:id="@+id/txtDireccion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:text="NIF/NIE"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirCP" />
+        <TextView
+            android:id="@+id/txtPunto9"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="50dp"
+            android:text="*"
+            android:textColor="@color/rojo"
+            android:textSize="30dp"
+            app:layout_constraintStart_toEndOf="@+id/txtDireccion"
+            app:layout_constraintTop_toTopOf="@+id/etCubrirCP" />
+
+        <EditText
+            android:id="@+id/etCubrirDireccion"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtDireccion" />
+
+        <TextView
+            android:id="@+id/txtTitulacion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Titulación : "
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etCubrirDireccion" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtTitulacion">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Gerocultor/a" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Gerocultor/a" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Gerocultor/a" />
+
+
+        </RadioGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
