--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,11 +7,14 @@
     android:background="@color/azulVerdoso"
     tools:context=".ActivitySignUp">
 
+
+
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
