Añado recycler view para poner los datos de los profesionales de la base de datos en la vista. Añado una Navigation bottom bar para ver el mapa o el recicler view y la personalizo Personalizo los botones de la navigation bottom bar

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,6 +17,11 @@
         />
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerProfesional"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 
 </fragment>
